# info-extraction

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.sample  MANIFEST.in  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  setup.py
api/: Dockerfile  README.md  __init__.py  api_config.yaml  requirements.txt
api/v1/routes/: predict.py
app-api/: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml  run.sh
app-api/api/: app.py  core.py
app-api/api/v1/routes/: predict.py
app-api/tests/: conftest.py  test_api.py
app_api/: requirements.txt
fast-token-classifier/: .dockerignore  Dockerfile  Makefile  README_api.md  docker-compose.yaml  pyproject.toml
fast-token-classifier/api/: __init__.py  api_config.yaml  core.py
fast-token-classifier/api/v1/routes/: health.py  predict.py
fast-token-classifier/api/v1/schemas/: in_out_schema.py
fast-token-classifier/fast_token_classifier/config/: core.py
fast-token-classifier/fast_token_classifier/info_extraction/: predict.py
fast-token-classifier/tests/: conftest.py  test_api.py  test_logics.py  test_pred.py
fast_token_classifier/api/: README.md  requirements.txt
frontend/: Dockerfile  pyproject.toml
frontend-app/: .dockerignore  Dockerfile  README.md  pyproject.toml
frontend-app/frontend/: __init__.py  app.py
frontend-app/frontend/config/: __init__.py  core.py  fe_config.yaml  schema.py
frontend/src/: __init__.py  app.py
frontend/src/config/: __init__.py  core.py  fe_config.yaml  schema.py
k8s/: deployment.yaml
src/: __init__.py  creds.py  logger.py
src/api/: Dockerfile  README.md  __init__.py  app.py  config.py  requirements.txt
src/config/: __init__.py  config.yaml  core.py  schema.py
src/info_extraction/: predict.py  train.py
src/info_extraction/utils/: data_loader.py  preprocessor.py  utilities.py
tests/: test_api.py
