[tool.poetry]
name = "frontend"
version = "0.1.0"
description = "This is used to display the application UI."
authors = ["Chinedu Ezeofor <neidu@email.com>"]
packages = [
        { include = "src" },
    ]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
gradio = "^4.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
