[tool.poetry]
name = "frontend"
version = "0.1.0"
description = "This is used to display the application UI."
authors = ["Chinedu Ezeofor <neidu@email.com>"]
packages = [
        { include = "src" },
    ]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
gradio = "^4.5.0"
requests = "^2.31.0"
pydantic = "^2.5.2"
typeguard = "^4.1.5"


[tool.poetry.group.dev.dependencies]
mypy = "^1.7.0"
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
